test/error/unsafe-car.scm
;; expected pair but got symbol
(caar `(a))
